made from git in the master branch, and from tarballs with no git information.

* 1.23.2 - 
- Build: Autodetect whether it's a release build (master branch, or a tarball
  without any git information) or a development build (anything else).
- System: Added a new version check for release builds. Use option "-nocheck"
  to skip this should it cause slow starts.
- Graphics: Fixed some breakage in flood fill.
- BASIC: IF something THEN REM is no longer handled as the start of a
  multi-line IF statement.
- BASIC: Unary minus (and plus) on arrays are now implemented.
- BASIC: Slight adjustment to TRACE VDU - 'TRACE VDU ON' now also works,
  and is functionally identical to 'TRACE VDU'.
- BASIC: EXT#handle%,length%% is now supported.
- BASIC: PTR#handle% and EXT#handle% now accept and can return 64-bit values
  for working with large files.

* 1.23.1 - 13 April 2024
- System: Rework the threading model to use pthreads even under SDL, this allows
  a custom thread size to be set, so the recursion limit is now a factor
  of the stack and workspace size.
- Graphics: Fix VDU 19 where physical colour is 8 to 15. Thank you to Richard
  Russell for spotting this.
- Networking: BGET# was broken on x86-32 and x86-64 (but not ARM), returning
  negative numbers if bit 7 was set. Thank you to BeeBS.ddns.net for their
  help with tracking this down.
- BASIC: Fixed a bug importing Russell-format tokenised BASIC where tokens
  were incorrectly decoded. Again, thank you to Richard Russell for spotting
  this.
- BASIC: RUN recursion limit removed, it's now implemented with a
  setjmp/longjmp.
- BASIC: EVAL stops at unexpected input without error (like Acorn BASIC),
  unless Strict mode is set. This discrepancy was also identified by Richard
  Russell.
- BASIC: Implement BBCSDL's PLOT x,y syntax (assumes plot code 69).

* 1.23.0 - 06 February 2024
- System: Add '-tek' (or -t) option to enable Tek graphics for 'tbrandy'